fixed page top spacing

--- a/assets/less/content.less
+++ b/assets/less/content.less
@@ -5,8 +5,7 @@
 .page div.container.wrap{
 	background: @jomi-light;
 	color: @jomi-dark;
-	padding: 50px 0px;
-	padding-top: 5px;
+	padding: 0px 0px;
 	margin: 0 auto;
 	font-size: 16px;
 	.content.row{
@@ -50,7 +49,7 @@
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
 	.page div.container.wrap{
-		padding: 50px 25px;
+		padding: 0px 25px;
 	}
 
 }
